TakeHomeChallengeTask/force-app/main/default/objects/Contact/fields/FieldX__c.field-meta.xml
<CustomField>
    <fullName>FieldX__c</fullName>
    <description>Custom field for Contact (Requirement 1)</description>
    <label>FieldX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>