TakeHomeChallengeTask/force-app/main/default/objects/Contact/fields/NextEvent__c.field-meta.xml
<CustomField>
    <fullName>NextEvent__c</fullName>
    <description>This field on contact is used to store the upcoming event.</description>
    <label>NextEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>