TakeHomeChallengeTask/force-app/main/default/objects/Contact/fields/NextTask__c.field-meta.xml
<CustomField>
    <fullName>NextTask__c</fullName>
    <description>This field on contact will store the upcoming task.</description>
    <label>NextTask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>